gcc/testsuite/rust/compile/macros/mbe/macro-issue3608.rs
include!(;

struct Baz {

impl Bar for


fn main() { )// { dg-error "unexpected closing delimiter .\\)." }
